--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@ font-family: 'Work Sans', sans-serif;
 /* banner section */
 .header{
   text-align: right;
-  padding-left: 500px;
+  
   background-image: url(../images/banner/banner2.png);
   height: 100vh;
   weight:100%;
@@ -18,6 +18,7 @@ font-family: 'Work Sans', sans-serif;
  
 .banner{
   padding: 200px;
+  margin-left: 500px;
  
 }
 .banner-header{
