--- a/styles/style.css
+++ b/styles/style.css
@@ -44,6 +44,10 @@ font-family: 'Work Sans', sans-serif;
 
 }
 /* end banner section */
+main{
+  margin: 0 auto;
+  max-width: 1600px;
+}
    
 
 
@@ -58,6 +62,7 @@ font-family: 'Work Sans', sans-serif;
   .failure-picture{
     width: 451px;
 height: 898px;
+
     
   }
   .failure-preview{
@@ -79,3 +84,61 @@ height: 898px;
   }
   /* end failure section */
   /* start my plan section */
+  .all-plan{
+   
+    margin: 0 230px;
+    background-color:#FFF
+  }
+  
+  .my-plan{
+    display: flex;
+    justify-content: space-evenly;
+   
+  }
+  .plan-heading{
+    font-size: 40px;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 50px;
+    padding: 10px;
+  }
+  .plan-details h3{
+    font-size: 30px;
+    font-weight: 700;
+    padding: 10px;
+  }
+  .plan-details h5{
+    font-size: 25px;
+    font-weight: 500;
+    color: #737272;
+  }
+  .plan-details{
+    text-align: center;
+  }
+  /* end plan section */
+  /* watch section */
+  .watch-section{
+    margin: 230px;
+    background-image: url(../images/watch.png),linear-gradient(90deg, #F15B22 0%, rgba(241, 91, 34, 0.00)100%);
+    background-blend-mode: overlay;
+    width: 75%;
+    background-repeat: no-repeat;
+    border-radius: 8px;
+    padding: 60px;
+  }
+  .btn-primary{
+    border-radius: 5px;
+    background-color: #FFF;
+    color: #F15B22;
+    padding: 18px 35px;
+    font-weight: 600;
+    font-size: 20px;
+    border: none;
+  }
+  .watch-header{
+    font-size: 40px;
+    font-weight: 700;
+    margin-bottom: 25px;
+    color: #FFF;
+  }
+  /* footer */
