--- a/styles/style.css
+++ b/styles/style.css
@@ -118,7 +118,7 @@ height: 898px;
   /* end plan section */
   /* watch section */
   .watch-section{
-    margin: 230px;
+    margin: 200px;
     background-image: url(../images/watch.png),linear-gradient(90deg, #F15B22 0%, rgba(241, 91, 34, 0.00)100%);
     background-blend-mode: overlay;
     width: 75%;
@@ -140,5 +140,50 @@ height: 898px;
     font-weight: 700;
     margin-bottom: 25px;
     color: #FFF;
+    
   }
   /* footer */
+  .footer{
+    display: flex;
+    justify-content: space-around;
+  padding: 230px;
+    background-color:  #151414;
+  }
+  .right-heading{
+    font-size: 45px;
+    font-weight: 700;
+    color: #F8F8F8;
+    padding: 10px;
+
+  }
+  p{
+    font-size: 16px;
+    color: #FFF;
+    padding: 10px;
+   
+
+  }
+  .subscribe{
+    font-size: 25px;
+    font-weight: 600;
+    color: #FFF;
+    margin-bottom: 30px;
+    
+  }
+ .email{
+  height: 64px;
+  margin-bottom:16px ;
+  weight:100%;
+  font-size: 18px;
+  color:#F3F3F3 ;
+  background-color: #151414;
+  border: 1px solid #FFF;
+  border-radius: 8px;
+  padding-left: 20px;
+ }
+ .footer-description{
+  margin-right: 200px;
+ }
+
+   
+  
